[gd_scene load_steps=11 format=2]

[ext_resource path="res://GFX/Items/trash_stand1.png" type="Texture" id=1]
[ext_resource path="res://GFX/Particles/portal_yellowParticle.png" type="Texture" id=2]
[ext_resource path="res://Items/Portal.gd" type="Script" id=3]
[ext_resource path="res://SFX/victory_song.ogg" type="AudioStream" id=4]
[ext_resource path="res://GFX/Items/trash_empty.png" type="Texture" id=5]
[ext_resource path="res://GFX/Items/trash_stand2.png" type="Texture" id=6]
[ext_resource path="res://GFX/Items/trash_stand3.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71.5479, 87.8444 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "empty",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "full",
"speed": 4.0
} ]

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 130.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 41.38
initial_velocity_random = 0.34
orbit_velocity = 0.25
orbit_velocity_random = 0.0
radial_accel = -75.86
radial_accel_random = 0.27

[node name="Portal" type="Node2D"]
scale = Vector2( 0.8, 1 )
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -10.5911, 50.7606 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 2 )
animation = "empty"
playing = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 25
lifetime = 2.0
randomness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="VictorySong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="VictorySong" to="." method="_on_VictorySong_finished"]
